[gd_scene load_steps=27 format=3 uid="uid://byy1qi0qg54g"]

[ext_resource type="Script" uid="uid://xjxohtukp0ry" path="res://Scripts/document/StampGame.gd" id="1_me3ql"]
[ext_resource type="Texture2D" uid="uid://7301ehrux6gc" path="res://assets/stamp/pozadina.png" id="1_sax3r"]
[ext_resource type="PackedScene" uid="uid://bk8lcv0bngid" path="res://Scenes/documents/stamp.tscn" id="3_5nufv"]
[ext_resource type="Script" uid="uid://84dy4muo6kxq" path="res://Scripts/document/stamp.gd" id="4_6x2q5"]
[ext_resource type="Texture2D" uid="uid://bp8b1k84dr2om" path="res://assets/stamp/ruka/ruka1.png" id="5_2yo30"]
[ext_resource type="Texture2D" uid="uid://dyxrnc8ngr8tf" path="res://assets/stamp/ruka/ruka2.png" id="6_1xnqt"]
[ext_resource type="Texture2D" uid="uid://b8jvxur4scar8" path="res://assets/stamp/ruka/ruka3.png" id="7_p716q"]
[ext_resource type="Texture2D" uid="uid://bl5htfaqke6s1" path="res://assets/stamp/ruka/ruka4.png" id="8_aprgn"]
[ext_resource type="Texture2D" uid="uid://bc5a86ugektsk" path="res://assets/stamp/ruka/ruka5.png" id="9_ro8po"]
[ext_resource type="Texture2D" uid="uid://cqde7q1q4l24b" path="res://assets/stamp/ruka/ruka6.png" id="10_lbnf3"]
[ext_resource type="Texture2D" uid="uid://dsyx2m2ndhf4" path="res://assets/stamp/ruka/ruka7.png" id="11_whxyh"]
[ext_resource type="Texture2D" uid="uid://bqx01k5q6j7g0" path="res://assets/stamp/ruka/ruka8.png" id="12_ioc1d"]
[ext_resource type="Texture2D" uid="uid://cpftgfu8qxfu" path="res://assets/stamp/ruka/ruka9.png" id="13_sdorj"]
[ext_resource type="AudioStream" uid="uid://c1w6yjnflnytw" path="res://assets/audio/papir.mp3" id="14_r1xbs"]
[ext_resource type="AudioStream" uid="uid://bsnxr857ud7q8" path="res://assets/audio/pecat.mp3" id="15_trqfa"]
[ext_resource type="Texture2D" uid="uid://cfob52lwmo61j" path="res://assets/tasks/nextGame.png" id="16_gwuua"]
[ext_resource type="Texture2D" uid="uid://d61k4l2kfs0p" path="res://assets/tasks/stamp.png" id="17_4vvr8"]

[sub_resource type="Animation" id="Animation_kuvf8"]
length = 0.001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(76, 142)]
}

[sub_resource type="Animation" id="Animation_2bu5i"]
resource_name = "glide"
length = 2.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.26667, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(76, 142), Vector2(350, 142), Vector2(622, 142)]
}

[sub_resource type="Animation" id="Animation_p52mb"]
resource_name = "press"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(333.724, 142), Vector2(333.724, 394)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ippe7"]
_data = {
&"RESET": SubResource("Animation_kuvf8"),
&"glide": SubResource("Animation_2bu5i"),
&"press": SubResource("Animation_p52mb")
}

[sub_resource type="Animation" id="Animation_wagmg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_2yo30")]
}

[sub_resource type="Animation" id="Animation_vkahn"]
resource_name = "default"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_2yo30"), ExtResource("6_1xnqt"), ExtResource("7_p716q"), ExtResource("8_aprgn"), ExtResource("9_ro8po"), ExtResource("10_lbnf3"), ExtResource("11_whxyh"), ExtResource("12_ioc1d"), ExtResource("13_sdorj"), ExtResource("5_2yo30")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0svin"]
_data = {
&"RESET": SubResource("Animation_wagmg"),
&"default": SubResource("Animation_vkahn")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyjxx"]
bg_color = Color(0.610296, 0.0515336, 0.146429, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8nxpn"]
bg_color = Color(1, 0.101961, 0.188235, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="StampGame" type="Node"]
script = ExtResource("1_me3ql")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_sax3r")

[node name="Spawn" type="Marker2D" parent="."]
position = Vector2(345, 342)

[node name="Stamp" parent="." instance=ExtResource("3_5nufv")]
visible = false
z_index = 5
position = Vector2(76, 142)
script = ExtResource("4_6x2q5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Stamp")
libraries = {
&"": SubResource("AnimationLibrary_ippe7")
}

[node name="Documents" type="Node" parent="."]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(397, 294)

[node name="Sprite2d" type="Sprite2D" parent="Node2D"]
position = Vector2(48, 86)
texture = ExtResource("5_2yo30")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D"]
libraries = {
&"": SubResource("AnimationLibrary_0svin")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
z_index = 10
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -312.0
offset_top = -100.0
offset_right = 313.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_eyjxx")
theme_override_styles/fill = SubResource("StyleBoxFlat_8nxpn")
max_value = 15.0
value = 10.0
show_percentage = false

[node name="PaperSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_r1xbs")

[node name="StampSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_trqfa")

[node name="Tutorial" type="TextureRect" parent="."]
offset_right = 700.0
offset_bottom = 600.0
texture = ExtResource("16_gwuua")

[node name="TextureRect" type="TextureRect" parent="Tutorial"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_4vvr8")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
